--- a/sketch_game/users/static/users/style.css
+++ b/sketch_game/users/static/users/style.css
@@ -2,7 +2,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 40%;
-    margin: auto;
+    margin: 20px auto auto auto;
 }
   
 .card:hover {
@@ -12,6 +12,13 @@
 .container {
     padding: 2px 16px;
     text-align: center;
+}
 
+.logout-container {
+    margin-top: 10px;
+    text-align: center;
+}
 
+#profile-picture {
+    width: 50px;
 }
