--- a/sketch_game/users/templates/users/profile.html
+++ b/sketch_game/users/templates/users/profile.html
@@ -1,33 +1,27 @@
+{% load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style> /* will be moved to stylesheet later*/
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            width: 40%;
-            margin: auto;
-        }
-        
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        }
-
-        .container {
-            padding: 2px 16px;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'users/style.css' %}">
 </head>
 <body>
     {% if user.is_authenticated %}
     <div class="card" >
         <div class="container">
-            <h2>{{user.get_username}}</h2>
-            <h3>{{user.get_email}}</h3>
+            <h2>{{user.username}}</h2>
+            {% if user.avatar %}  
+                <img src="{{ user.avatar.url }}" id="profile-picture" alt="User Avatar">
+            {% else %}
+            <img src="/media/default-avatar.png" id="profile-picture" alt="Default Avatar">
+            {% endif %}
+            <h3>{{user.email}}</h3>
+            <h3>{{user.profile.bio}}</h3>
+            <form type="submit" id="edit-profile" action="edit/">
+                <input type="submit" value="Edit Profile"/>
+            </form>
         </div>
     </div>
     <div class="logout-container">
